# fastnest

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
example/: .env.example  api_test.sh  requirements.txt  schema.sql
example/example/: app_module.py  main.py
example/example/auth/: auth_controller.py  auth_module.py  auth_service.py
example/example/auth/dto/: register_dto.py
example/example/common/decorators/: current_user_decorator.py
example/example/common/guards/: jwt_guard.py
example/example/common/interceptors/: logging_interceptor.py
example/example/config/: config_module.py  config_service.py
example/example/database/: database_module.py  database_service.py
example/example/posts/: posts_controller.py  posts_module.py  posts_service.py
example/example/posts/dto/: create_post_dto.py  update_post_dto.py
example/example/users/: users_controller.py  users_module.py  users_service.py
example/example/users/dto/: create_user_dto.py  update_user_dto.py
example/example/utils/: security.py
fastnest/: __init__.py
fastnest/cli/: ast_utils.py  main.py  naming.py
fastnest/cli/commands/: generate.py  new.py
fastnest/cli/templates/: controller.py.tpl  dto.py.tpl  gateway.py.tpl  guard.py.tpl  module.py.tpl  service.py.tpl
fastnest/cli/templates/new/: README.md.tpl  app_module.py.tpl  config_module.py.tpl  config_service.py.tpl  env.example.tpl  gitignore.tpl  main.py.tpl  pyproject.toml.tpl  test_health.py.tpl
fastnest/common/: __init__.py  base.py  decorators.py  exceptions.py  interfaces.py  lifecycle.py  logger.py  pipes.py
fastnest/common/guards/: roles_guard.py
fastnest/core/: async_utils.py  decorators.py  di.py  dynamic_module.py  factory.py  metadata.py  middleware.py  params.py  reflector.py  signature_cache.py  signature_rewriter.py  tokens.py  websocket.py
tests/: test_cli.py  test_cli_new.py  test_fastnest.py
(+2 files in other folders)
