[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastnest"
version = "0.1.1"
description = "A NestJS-inspired framework for Python built on top of FastAPI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Hamza Elmouddane", email = "hamzaelmouddane2000@gmail.com" }
]
keywords = [
    "fastapi", "nestjs", "framework", "dependency-injection",
    "decorators", "python", "async", "rest", "api"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage      = "https://github.com/hamza-elmoudden/fastnest"
Documentation = "https://github.com/hamza-elmoudden/fastnest#readme"
Repository    = "https://github.com/hamza-elmoudden/fastnest"
Issues        = "https://github.com/hamza-elmoudden/fastnest/issues"
Changelog     = "https://github.com/hamza-elmoudden/fastnest/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["fastnest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]